remove email auth, added telegram auth
